--- a/osu!downloader.csproj
+++ b/osu!downloader.csproj
@@ -88,7 +88,7 @@
       <HintPath>packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -117,6 +117,7 @@
     <Compile Include="OsuDownloader\IO\TimingPoint.cs" />
     <Compile Include="OsuDownloader\Beatmap\IBeatmapSet.cs" />
     <Compile Include="OsuDownloader\DataBase\OsuDb.cs" />
+    <Compile Include="OsuDownloader\BeatmapSearcher.cs" />
     <Compile Include="OsuDownloader\Server\Mirror\OsuHexide.cs" />
     <Compile Include="OsuDownloader\Server\OnlineBeatmapSet.cs" />
     <Compile Include="OsuDownloader\DataBase\BeatmapDb.cs" />
@@ -124,11 +125,6 @@
     <Compile Include="OsuDownloader\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OsuDownloader\Server\BeatmapMirror.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -136,12 +132,6 @@
     <None Include="osu!downloader_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="storycraft_key.snk" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
